--- a/electre-ou-le-crepuscule-des-rois.html
+++ b/electre-ou-le-crepuscule-des-rois.html
@@ -46,6 +46,23 @@
       name="twitter:image:alt"
       content="ELECTRE ou le crépuscule des rois"
     />
+    <!-- Meta Pixel Code -->
+    <script>
+      !function(f,b,e,v,n,t,s)
+      {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+      n.queue=[];t=b.createElement(e);t.async=!0;
+      t.src=v;s=b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t,s)}(window, document,'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+      fbq('init', '577936370792392');
+      fbq('track', 'PageView');
+      </script>
+      <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=577936370792392&ev=PageView&noscript=1"
+      /></noscript>
+      <!-- End Meta Pixel Code -->
 
     <title>Electre ou le crépuscule des rois</title>
     <link
@@ -162,15 +179,6 @@
         <h3 class="has-text-light">Programmation</h3>
         <p>
           Au <b>théâtre de l'Essaïon</b> du 23/06/2022 au 01/10/2022
-          <br />
-          <a
-            class="button is-black is-inverted is-outlined m-4 is-large"
-            href="https://www.essaion-theatre.com/spectacle/968_electre-ou-le-crepuscule-des-rois.html"
-            target="_blank"
-            ><span class="icon">
-              <i class="mdi mdi-ticket-confirmation"></i> </span
-            ><span>RÉSERVER</span></a
-          >
         </p>
 
         <h3 class="has-text-light">Presse</h3>
