--- a/index.html
+++ b/index.html
@@ -47,21 +47,40 @@
 
     <!-- Meta Pixel Code -->
     <script>
-      !function(f,b,e,v,n,t,s)
-      {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-      n.queue=[];t=b.createElement(e);t.async=!0;
-      t.src=v;s=b.getElementsByTagName(e)[0];
-      s.parentNode.insertBefore(t,s)}(window, document,'script',
-      'https://connect.facebook.net/en_US/fbevents.js');
-      fbq('init', '577936370792392');
-      fbq('track', 'PageView');
-      </script>
-      <noscript><img height="1" width="1" style="display:none"
-      src="https://www.facebook.com/tr?id=577936370792392&ev=PageView&noscript=1"
-      /></noscript>
-      <!-- End Meta Pixel Code -->
+      !(function (f, b, e, v, n, t, s) {
+        if (f.fbq) return;
+        n = f.fbq = function () {
+          n.callMethod
+            ? n.callMethod.apply(n, arguments)
+            : n.queue.push(arguments);
+        };
+        if (!f._fbq) f._fbq = n;
+        n.push = n;
+        n.loaded = !0;
+        n.version = "2.0";
+        n.queue = [];
+        t = b.createElement(e);
+        t.async = !0;
+        t.src = v;
+        s = b.getElementsByTagName(e)[0];
+        s.parentNode.insertBefore(t, s);
+      })(
+        window,
+        document,
+        "script",
+        "https://connect.facebook.net/en_US/fbevents.js"
+      );
+      fbq("init", "577936370792392");
+      fbq("track", "PageView");
+    </script>
+    <noscript
+      ><img
+        height="1"
+        width="1"
+        style="display: none"
+        src="https://www.facebook.com/tr?id=577936370792392&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Meta Pixel Code -->
 
     <title>Les Sept Sceaux : Electre ou le crépuscule des rois</title>
     <link
@@ -137,13 +156,28 @@
         </div>
 
         <p class="content">
-          Au <b>théâtre de l'Essaïon</b> du 23/06/2022 au 01/10/2022
+          Au <b>théâtre de l'Essaïon</b> du 12/04/2022 au 18/05/2022
+          <br />
+          <span class="tag is-danger"
+            ><span class="icon"><i class="mdi mdi-creation"></i>&nbsp;</span
+            >Reprises&nbsp;<span class="icon"
+              ><i class="mdi mdi-creation"></i></span
+          ></span>
+          <br />
+          <a
+            class="button is-black is-inverted is-outlined m-4 is-large"
+            href="https://www.essaion-theatre.com/spectacle/968_electre-ou-le-crepuscule-des-rois.html"
+            target="_blank"
+            ><span class="icon">
+              <i class="mdi mdi-ticket-confirmation"></i> </span
+            ><span>RÉSERVER</span></a
+          >
         </p>
 
         <figure style="max-width: 500px">
           <img
-            src="img/fb_adieux_a_la_reine.png"
-            alt="Les Adieux à la Reine ?"
+            src="img/affiche_2.jpg"
+            alt="Electre Ou Le Crepuscule Des Rois"
           />
         </figure>
       </div>
