--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <meta
       name="description"
-      content="Les Sept Sceaux: collectif théâtral. Électre ou le crépuscule des rois, en ce moment au théâtre de l'Essaïon à Paris pour 30 dates du 23/06/2022 au 01/10/2022."
+      content="Les Sept Sceaux: collectif théâtral. Électre ou le crépuscule des rois, en ce moment au théâtre de l'Essaïon à Paris. Puis La Sérénade de Slawomir Mrozek."
     />
     <meta
       name="keywords"
@@ -29,7 +29,7 @@
     <meta
       property="og:image"
       itemprop="image"
-      content="http://lesseptsceaux.com/img/la_fin_est_proche.jpg"
+      content="http://lesseptsceaux.com/img/electre/affiche2.jpg"
     />
     <meta property="og:url" content="http://lesseptsceaux.com" />
     <meta name="twitter:card" content="summary_large_image" />
@@ -176,7 +176,7 @@
 
         <figure style="max-width: 500px">
           <img
-            src="img/affiche_2.jpg"
+            src="img/electre/affiche_2.jpg"
             alt="Electre Ou Le Crepuscule Des Rois"
           />
         </figure>
@@ -191,6 +191,8 @@
           href="/electre-ou-le-crepuscule-des-rois"
           >Électre</a
         >
+        <span class="pl-4 pr-4">|</span>
+        <a class="column p-0 has-text-light" href="/la-serenade">La&nbsp;Sérénade</a>
         <span class="pl-4 pr-4">|</span>
         <a class="column p-0 has-text-light" href="/contact">Contact</a>
       </p>
