--- a/contact.html
+++ b/contact.html
@@ -17,15 +17,12 @@
     <meta name="language" content="French" />
 
     <!--  Essential META Tags -->
-    <meta
-      property="og:title"
-      content="Les Sept Sceaux : Contact"
-    />
+    <meta property="og:title" content="Les Sept Sceaux : Contact" />
     <meta property="og:type" content="website" />
     <meta
       property="og:image"
       itemprop="image"
-      content="http://lesseptsceaux.com/img/facebook_hd.png"
+      content="http://lesseptsceaux.com/img/electre/facebook_hd.png"
     />
     <meta property="og:url" content="http://lesseptsceaux.com/contact" />
     <meta name="twitter:card" content="summary_large_image" />
@@ -42,21 +39,40 @@
     />
     <!-- Meta Pixel Code -->
     <script>
-      !function(f,b,e,v,n,t,s)
-      {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-      n.queue=[];t=b.createElement(e);t.async=!0;
-      t.src=v;s=b.getElementsByTagName(e)[0];
-      s.parentNode.insertBefore(t,s)}(window, document,'script',
-      'https://connect.facebook.net/en_US/fbevents.js');
-      fbq('init', '577936370792392');
-      fbq('track', 'PageView');
-      </script>
-      <noscript><img height="1" width="1" style="display:none"
-      src="https://www.facebook.com/tr?id=577936370792392&ev=PageView&noscript=1"
-      /></noscript>
-      <!-- End Meta Pixel Code -->
+      !(function (f, b, e, v, n, t, s) {
+        if (f.fbq) return;
+        n = f.fbq = function () {
+          n.callMethod
+            ? n.callMethod.apply(n, arguments)
+            : n.queue.push(arguments);
+        };
+        if (!f._fbq) f._fbq = n;
+        n.push = n;
+        n.loaded = !0;
+        n.version = "2.0";
+        n.queue = [];
+        t = b.createElement(e);
+        t.async = !0;
+        t.src = v;
+        s = b.getElementsByTagName(e)[0];
+        s.parentNode.insertBefore(t, s);
+      })(
+        window,
+        document,
+        "script",
+        "https://connect.facebook.net/en_US/fbevents.js"
+      );
+      fbq("init", "577936370792392");
+      fbq("track", "PageView");
+    </script>
+    <noscript
+      ><img
+        height="1"
+        width="1"
+        style="display: none"
+        src="https://www.facebook.com/tr?id=577936370792392&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Meta Pixel Code -->
 
     <title>Les Sept Sceaux : Contact</title>
     <link
@@ -148,6 +164,7 @@
               matthieu.desquilbet<span class="icon">
                 <i class="mdi mdi-at"></i> </span
               >gmail.com<br />
+              Dossiers de presse :
               <a
                 href="/electre-ou-le-crepuscule-des-rois-dossier-presse.pdf"
                 target="_blank"
@@ -156,7 +173,17 @@
                 <span class="icon">
                   <i class="mdi mdi-file"></i>
                 </span>
-                <span>Dossier de presse d'<i>Électre</i></span>
+                <i>Électre</i>
+              </a>
+              <a
+                href="/SERENADE-Dossier-Artistique-2023-wecompress.com.pdf"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <span class="icon">
+                  <i class="mdi mdi-file"></i>
+                </span>
+                <i>La Sérénade</i>
               </a>
             </p>
           </div>
@@ -172,6 +199,8 @@
           href="/electre-ou-le-crepuscule-des-rois"
           >Électre</a
         >
+        <span class="pl-4 pr-4">|</span>
+        <a class="column p-0 has-text-light" href="/la-serenade">La&nbsp;Sérénade</a>
         <span class="pl-4 pr-4">|</span>
         <a class="column p-0 has-text-light" href="/contact">Contact</a>
       </p>
