fix(serenade+electre): responsive pb - white margin on mobile

--- a/electre-ou-le-crepuscule-des-rois.html
+++ b/electre-ou-le-crepuscule-des-rois.html
@@ -272,38 +272,48 @@
           >
         </p>
       </div>
-
       <div class="block">
-        <div class="columns">
-          <figure class="column is-4">
-            <img
-              src="img/electre/fb_adieux_a_la_reine.png"
-              alt="Les Adieux à la Reine ?"
-            />
-          </figure>
-          <figure class="column is-4">
-            <img src="img/electre/facebook_hd.png" alt="Affiche carrée" />
-          </figure>
-          <figure class="column is-4">
-            <img
-              src="img/electre/instagram_citation.jpg"
-              alt="Citation d'Oreste à Clytemnestre"
-            />
-          </figure>
+        <div class="tile">
+          <div class="tile is-4">
+            <figure class="image">
+              <img
+                src="img/electre/fb_adieux_a_la_reine.png"
+                alt="Les Adieux à la Reine ?"
+              />
+            </figure>
+          </div>
+          <div class="tile is-4">
+            <figure class="image">
+              <img src="img/electre/facebook_hd.png" alt="Affiche carrée" />
+            </figure>
+          </div>
+          <div class="tile is-4">
+            <figure class="image">
+              <img
+                src="img/electre/instagram_citation.jpg"
+                alt="Citation d'Oreste à Clytemnestre"
+              />
+            </figure>
+          </div>
         </div>
-        <div class="columns">
-          <figure class="column is-4 is-offset-2">
-            <img
-              src="img/electre/instagram_theatre&co.jpg"
-              alt="Article Marek Ocenas"
-            />
-          </figure>
-          <figure class="column is-4">
-            <img
-              src="img/electre/instagram_theatreonline.jpg"
-              alt="Coup de coeur théâtreonline"
-            />
-          </figure>
+        <div class="tile">
+          <div class="tile is-2"></div>
+          <div class="tile is-4">
+            <figure class="image">
+              <img
+                src="img/electre/instagram_theatre&co.jpg"
+                alt="Article Marek Ocenas"
+              />
+            </figure>
+          </div>
+          <div class="tile is-4">
+            <figure class="image">
+              <img
+                src="img/electre/instagram_theatreonline.jpg"
+                alt="Coup de coeur théâtreonline"
+              />
+            </figure>
+          </div>
         </div>
       </div>
     </section>
