--- a/la-serenade.html
+++ b/la-serenade.html
@@ -221,14 +221,12 @@
       </div>
 
       <div class="block">
-        <div class="columns">
-          <figure class="column">
-            <img
-              src="img/serenade/La-serenade-affiche-web.jpg"
-              alt="La Sérénade de Slawomir Mrozek"
-            />
-          </figure>
-        </div>
+        <figure>
+          <img
+            src="img/serenade/La-serenade-affiche-web.jpg"
+            alt="La Sérénade de Slawomir Mrozek"
+          />
+        </figure>
       </div>
     </section>
     <footer class="is-size-7 mt-4 mr-auto mb-1 ml-auto">
