feat(electre): resize images and update facebook preview

--- a/electre-ou-le-crepuscule-des-rois.html
+++ b/electre-ou-le-crepuscule-des-rois.html
@@ -28,7 +28,7 @@
     <meta
       property="og:image"
       itemprop="image"
-      content="http://lesseptsceaux.com/img/electre/affiche_2.jpg"
+      content="http://lesseptsceaux.com/img/electre/affiche_2_square.png"
     />
     <meta
       property="og:url"
@@ -284,7 +284,7 @@
           </div>
           <div class="tile is-4">
             <figure class="image">
-              <img src="img/electre/facebook_hd.png" alt="Affiche carrée" />
+              <img src="img/electre/affiche_square.jpg" alt="Affiche carrée" />
             </figure>
           </div>
           <div class="tile is-4">
