--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <meta
       property="og:image"
       itemprop="image"
-      content="http://lesseptsceaux.com/img/electre/affiche2.jpg"
+      content="http://lesseptsceaux.com/img/electre/affiche_2_square.png"
     />
     <meta property="og:url" content="http://lesseptsceaux.com" />
     <meta name="twitter:card" content="summary_large_image" />
