feat(serenade): update index to promote Serenade

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="title"
-      content="Les Sept Sceaux : Electre ou le crépuscule des rois"
+      content="Les Sept Sceaux : La Sérénade de Slawomir Mrozek"
     />
     <meta
       name="description"
@@ -22,14 +22,14 @@
     <!--  Essential META Tags -->
     <meta
       property="og:title"
-      content="Les Sept Sceaux : Electre ou le crépuscule des rois"
+      content="Les Sept Sceaux : La Sérénade de Slawomir Mrozek"
     />
     <meta property="og:type" content="website" />
     <meta property="fb:app_id" content="website" />
     <meta
       property="og:image"
       itemprop="image"
-      content="http://lesseptsceaux.com/img/electre/affiche_2_square.png"
+      content="http://lesseptsceaux.com/img/serenade/La-serenade-affiche-web.jpg"
     />
     <meta property="og:url" content="http://lesseptsceaux.com" />
     <meta name="twitter:card" content="summary_large_image" />
@@ -37,13 +37,10 @@
     <!--  Non-Essential, But Recommended -->
     <meta
       property="og:description"
-      content="Les Sept Sceaux: collectif théâtral. Électre ou le crépuscule des rois, en ce moment au théâtre de l'Essaïon à Paris pour 30 dates du 23/06/2022 au 01/10/2022."
+      content="Les Sept Sceaux: collectif théâtral. Électre ou le crépuscule des rois et La Sérénade en ce moment à l'Essaïon pour 20 dates en 2023."
     />
     <meta property="og:site_name" content="Les Sept Sceaux" />
-    <meta
-      name="twitter:image:alt"
-      content="ELECTRE ou le crépuscule des rois"
-    />
+    <meta name="twitter:image:alt" content="La Sérénade de Slawomir Mrozek" />
 
     <!-- Meta Pixel Code -->
     <script>
@@ -82,7 +79,7 @@
     /></noscript>
     <!-- End Meta Pixel Code -->
 
-    <title>Les Sept Sceaux : Electre ou le crépuscule des rois</title>
+    <title>Les Sept Sceaux : La Sérénade de Slawomir Mrozek</title>
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -117,71 +114,68 @@
     <header class="is-flex is-justify-content-center is-size-7">
       <p><b>Les Sept Sceaux</b> <i>présentent</i></p>
     </header>
-    <section class="container mt-2">
-      <div class="has-text-centered" style="max-width: 500px">
-        <div class="block is-uppercase">
-          <h1 class="columns is-mobile m-0 is-size-1 has-text-weight-bold">
-            <span class="column p-0">É</span>
-            <span class="column p-0">L</span>
-            <span class="column p-0">E</span>
-            <span class="column p-0">C</span>
-            <span class="column p-0">T</span>
-            <span class="column p-0">R</span>
-            <span class="column p-0">E</span>
-          </h1>
-          <h2 class="columns is-mobile m-0 is-size-5 has-text-weight-light">
-            <span class="column p-0">l</span>
-            <span class="column p-0">e</span>
-            <span class="column p-0">&nbsp;</span>
-            <span class="column p-0">c</span>
-            <span class="column p-0">r</span>
-            <span class="column p-0">é</span>
-            <span class="column p-0">p</span>
-            <span class="column p-0">u</span>
-            <span class="column p-0">s</span>
-            <span class="column p-0">c</span>
-            <span class="column p-0">u</span>
-            <span class="column p-0">l</span>
-            <span class="column p-0">e</span>
-            <span class="column p-0">&nbsp;</span>
-            <span class="column p-0">d</span>
-            <span class="column p-0">e</span>
-            <span class="column p-0">s</span>
-            <span class="column p-0">&nbsp;</span>
-            <span class="column p-0">r</span>
-            <span class="column p-0">o</span>
-            <span class="column p-0">i</span>
-            <span class="column p-0">s</span>
-          </h2>
-        </div>
+    <section class="container mt-2 has-text-centered">
+      <div
+        class="block is-uppercase m-auto"
+        style="max-width: 500px; width: 100%"
+      >
+        <h1 class="columns is-mobile m-0 is-size-1 has-text-weight-bold">
+          <span class="column p-0">L</span>
+          <span class="column p-0">A</span>
+          <span class="column p-0">&nbsp;</span>
+          <span class="column p-0">S</span>
+          <span class="column p-0">É</span>
+          <span class="column p-0">R</span>
+          <span class="column p-0">É</span>
+          <span class="column p-0">N</span>
+          <span class="column p-0">A</span>
+          <span class="column p-0">D</span>
+          <span class="column p-0">E</span>
+        </h1>
+        <h2 class="columns is-mobile m-0 is-size-5 has-text-weight-light">
+          <span class="column p-0">d</span>
+          <span class="column p-0">e</span>
+          <span class="column p-0">&nbsp;</span>
+          <span class="column p-0">S</span>
+          <span class="column p-0">l</span>
+          <span class="column p-0">a</span>
+          <span class="column p-0">w</span>
+          <span class="column p-0">o</span>
+          <span class="column p-0">m</span>
+          <span class="column p-0">i</span>
+          <span class="column p-0">r</span>
+          <span class="column p-0">&nbsp;</span>
+          <span class="column p-0">M</span>
+          <span class="column p-0">r</span>
+          <span class="column p-0">o</span>
+          <span class="column p-0">z</span>
+          <span class="column p-0">e</span>
+          <span class="column p-0">k</span>
+        </h2>
+      </div>
 
-        <p class="content">
-          Au <b>théâtre de l'Essaïon</b> du 12/04/2022 au 18/05/2022
-          <br />
-          <span class="tag is-danger"
-            ><span class="icon"><i class="mdi mdi-creation"></i>&nbsp;</span
-            >Reprises&nbsp;<span class="icon"
-              ><i class="mdi mdi-creation"></i></span
-          ></span>
+      <div class="content mt-5">
+        <p>
+          Au <b>théâtre de l'Essaïon</b> du 24/05/2023 au 15/06/2023
           <br />
           <a
             class="button is-black is-inverted is-outlined m-4 is-large"
-            href="https://www.essaion-theatre.com/spectacle/968_electre-ou-le-crepuscule-des-rois.html"
+            href="https://www.essaion-theatre.com/spectacle/1012_la-serenade.html"
             target="_blank"
             ><span class="icon">
               <i class="mdi mdi-ticket-confirmation"></i> </span
             ><span>RÉSERVER</span></a
           >
         </p>
-
         <figure style="max-width: 500px">
           <img
-            src="img/electre/affiche_2.jpg"
-            alt="Electre Ou Le Crepuscule Des Rois"
+            src="img/serenade/La-serenade-affiche-web.jpg"
+            alt="La Sérénade"
           />
         </figure>
       </div>
     </section>
+    
     <footer class="is-size-7 mt-4 mr-auto mb-1 ml-auto">
       <p class="columns is-mobile m-0">
         <a class="column p-0 has-text-light" href="/">Accueil</a>
@@ -192,7 +186,9 @@
           >Électre</a
         >
         <span class="pl-4 pr-4">|</span>
-        <a class="column p-0 has-text-light" href="/la-serenade">La&nbsp;Sérénade</a>
+        <a class="column p-0 has-text-light" href="/la-serenade"
+          >La&nbsp;Sérénade</a
+        >
         <span class="pl-4 pr-4">|</span>
         <a class="column p-0 has-text-light" href="/contact">Contact</a>
       </p>
