feat(theoreme): create Theoreme page

--- a/theoreme.html
+++ b/theoreme.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="title"
-      content="Les Sept Sceaux : Théorème de Pier Paolo Pasolini"
+      content="Théorème de Pier Paolo Pasolini - Pièce de théâtre"
     />
     <meta
       name="description"
-      content="Les Sept Sceaux: collectif théâtral. Théorème de Pier Paolo Pasolini au Point du Jour à Paris. Électre ou le crépuscule des rois et La Sérénade de Slawomir Mrozek, en 2023 au théâtre de l'Essaïon à Paris."
+      content="Et si le Christ revenait aujourd'hui ? Qui serait-il ? Où se placerait sa subversion ? Que viendrait-il remuer qui végète dans notre siècle ?"
     />
     <meta
       name="keywords"
-      content="Comédie,Théâtre,Arts et musique,Grèce,Arts de la scène,Histoire culturelle,Arts,Tragédie,Littérature,Histoire,Divertissement,Ère élisabéthaine,Hamlet,Patrimoine culturel,Antiquité,Pièces de théâtre,Comédie dramatique,Grèce antique"
+      content="Comédie,Théâtre,Arts et musique,Italie,Pasolini,Cinéma,Arts de la scène,Histoire culturelle,Arts,Littérature,Histoire,Divertissement,Patrimoine culturel,Pièces de théâtre,Comédie dramatique, Parabole"
     />
     <meta name="robots" content="index, follow" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -22,26 +22,24 @@
     <!--  Essential META Tags -->
     <meta
       property="og:title"
-      content="Les Sept Sceaux : Théorème de Pier Paolo Pasolini"
+      content="Théorème de Pier Paolo Pasolini - Pièce de théâtre"
     />
-    <meta property="og:type" content="website" />
-    <meta property="fb:app_id" content="website" />
+    <meta property="og:type" content="article" />
     <meta
       property="og:image"
       itemprop="image"
-      content="http://lesseptsceaux.com/img/theoreme/theoreme-affiche-web.png"
+      content="http://lesseptsceaux.com/img/theoreme/theoreme-affiche-web.jpg"
     />
-    <meta property="og:url" content="http://lesseptsceaux.com" />
+    <meta property="og:url" content="http://lesseptsceaux.com/theoreme" />
     <meta name="twitter:card" content="summary_large_image" />
 
     <!--  Non-Essential, But Recommended -->
     <meta
       property="og:description"
-      content="Les Sept Sceaux: collectif théâtral. Théorème de Pier Paolo Pasolini au Point du Jour à Paris. Électre ou le crépuscule des rois et La Sérénade de Slawomir Mrozek, en 2023 au théâtre de l'Essaïon à Paris."
+      content="Et si le Christ revenait aujourd'hui ? Qui serait-il ? Où se placerait sa subversion ? Que viendrait-il remuer qui végète dans notre siècle ?"
     />
     <meta property="og:site_name" content="Les Sept Sceaux" />
     <meta name="twitter:image:alt" content="Théorème de Pier Paolo Pasolini" />
-
     <!-- Meta Pixel Code -->
     <script>
       !(function (f, b, e, v, n, t, s) {
@@ -79,7 +77,7 @@
     /></noscript>
     <!-- End Meta Pixel Code -->
 
-    <title>Les Sept Sceaux : Théorème de Pier Paolo Pasolini</title>
+    <title>Théorème</title>
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -157,15 +155,18 @@
 
       <div class="content mt-5">
         <p>
-          Et si le Christ revenait aujourd'hui ? Qui serait-il ? Où se placerait sa subversion ?
-          Que viendrait-il remuer qui végète dans notre siècle?<br />
+          Et si le Christ revenait aujourd'hui ? Qui serait-il ? Où se placerait
+          sa subversion ? Que viendrait-il remuer qui végète dans notre
+          siècle?<br />
           Dans une riche famille bourgeoise du 11ème arrondissement de Paris,
-          arrive un jour un jeune-homme à la présence magnétique. 
-          La bonne, le fils, la mère, la fille, le père, tous tombent successivement sous le charme du visiteur, 
-          qui donne à chacun son amour charnel. Puis le jeune homme s'en va comme il est venu. 
-          Pour la famille, ce départ est une prise de conscience douloureuse de son vide existentiel. 
-          Chacun va alors connaître une traversée du désert qui n'a pas d'issue. 
-          Seule la bonne, qui n'a pas perdu son sens du sacré, trouve la voie du salut et accomplit des miracles.
+          arrive un jour un jeune-homme à la présence magnétique. La bonne, le
+          fils, la mère, la fille, le père, tous tombent successivement sous le
+          charme du visiteur, qui donne à chacun son amour charnel. Puis le
+          jeune homme s'en va comme il est venu. Pour la famille, ce départ est
+          une prise de conscience douloureuse de son vide existentiel. Chacun va
+          alors connaître une traversée du désert qui n'a pas d'issue. Seule la
+          bonne, qui n'a pas perdu son sens du sacré, trouve la voie du salut et
+          accomplit des miracles.
         </p>
 
         <h5 class="has-text-light">Mise En Scene</h5>
@@ -194,11 +195,11 @@
               <td class="has-text-left">Lucie, la mère</td>
             </tr>
             <tr>
-              <td class="has-text-right">Alwina Najem-Meyer</td>
+              <td class="has-text-right">Alwina<br />Najem-Meyer</td>
               <td class="has-text-left">Émilie, la bonne</td>
             </tr>
             <tr>
-              <td class="has-text-right">Pauline Scoupe-Fournier</td>
+              <td class="has-text-right">Pauline<br />Scoupe-Fournier</td>
               <td class="has-text-left">Odette, la fille</td>
             </tr>
           </tbody>
@@ -206,7 +207,8 @@
 
         <h3 class="has-text-light">Programmation</h3>
         <p>
-          Au <b>Centre Paris Anim' Point du Jour</b> le 30/11 et le 01/12 2023 à 20h<br />
+          Au <b>Centre Paris Anim' Point du Jour</b> le 30/11 et le 01/12 2023 à
+          20h<br />
         </p>
       </div>
 
@@ -219,7 +221,6 @@
         </figure>
       </div>
     </section>
-    
     <footer class="is-size-7 mt-4 mr-auto mb-1 ml-auto">
       <p class="columns is-mobile m-0">
         <a class="column p-0 has-text-light" href="/">Accueil</a>
