--- a/electre-ou-le-crepuscule-des-rois.html
+++ b/electre-ou-le-crepuscule-des-rois.html
@@ -331,6 +331,8 @@
           >La&nbsp;Sérénade</a
         >
         <span class="pl-4 pr-4">|</span>
+        <a class="column p-0 has-text-light" href="/theoreme">Théorème</a>
+        <span class="pl-4 pr-4">|</span>
         <a class="column p-0 has-text-light" href="/contact">Contact</a>
       </p>
     </footer>
