--- a/la-serenade.html
+++ b/la-serenade.html
@@ -77,7 +77,7 @@
     /></noscript>
     <!-- End Meta Pixel Code -->
 
-    <title>Electre ou le crépuscule des rois</title>
+    <title>La Sérénade</title>
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -242,6 +242,8 @@
         <a class="column p-0 has-text-light" href="/la-serenade"
           >La&nbsp;Sérénade</a
         >
+        <span class="pl-4 pr-4">|</span>
+        <a class="column p-0 has-text-light" href="/theoreme">Théorème</a>
         <span class="pl-4 pr-4">|</span>
         <a class="column p-0 has-text-light" href="/contact">Contact</a>
       </p>
