fix(theoreme): facebook caption

--- a/theoreme.html
+++ b/theoreme.html
@@ -28,7 +28,7 @@
     <meta
       property="og:image"
       itemprop="image"
-      content="http://lesseptsceaux.com/img/theoreme/theoreme-affiche-web.jpg"
+      content="http://lesseptsceaux.com/img/theoreme/theoreme-affiche-web.png"
     />
     <meta property="og:url" content="http://lesseptsceaux.com/theoreme" />
     <meta name="twitter:card" content="summary_large_image" />
