feat(theoreme): add reservation links

--- a/index.html
+++ b/index.html
@@ -157,60 +157,23 @@
 
       <div class="content mt-5">
         <p>
-          Et si le Christ revenait aujourd'hui ? Qui serait-il ? Où se placerait sa subversion ?
-          Que viendrait-il remuer qui végète dans notre siècle?<br />
-          Dans une riche famille bourgeoise du 11ème arrondissement de Paris,
-          arrive un jour un jeune-homme à la présence magnétique. 
-          La bonne, le fils, la mère, la fille, le père, tous tombent successivement sous le charme du visiteur, 
-          qui donne à chacun son amour charnel. Puis le jeune homme s'en va comme il est venu. 
-          Pour la famille, ce départ est une prise de conscience douloureuse de son vide existentiel. 
-          Chacun va alors connaître une traversée du désert qui n'a pas d'issue. 
-          Seule la bonne, qui n'a pas perdu son sens du sacré, trouve la voie du salut et accomplit des miracles.
+          Au <b>Centre Paris Anim' Point du Jour</b> le 30/11 et le 01/12 2023 à
+          20h<br /><a
+            class="button is-black is-inverted is-outlined m-4 is-large"
+            href="https://www.helloasso.com/associations/les-sept-sceaux/evenements/theoreme-de-pier-paolo-pasolini"
+            target="_blank"
+            ><span class="icon">
+              <i class="mdi mdi-ticket-confirmation"></i> </span
+            ><span>30/11</span></a
+          ><a
+            class="button is-black is-inverted is-outlined m-4 is-large"
+            href="https://www.helloasso.com/associations/les-sept-sceaux/evenements/theoreme-de-pier-paolo-pasolini-01-12"
+            target="_blank"
+            ><span class="icon">
+              <i class="mdi mdi-ticket-confirmation"></i> </span
+            ><span>01/12</span></a
+          >
         </p>
-
-        <h5 class="has-text-light">Mise En Scene</h5>
-        <p>Alwina Najem-Meyer</p>
-
-        <h5 class="has-text-light">Avec</h5>
-        <table
-          class="table is-narrow has-background-black has-text-light m-auto"
-          style="max-width: 300px; width: 100%"
-        >
-          <tbody>
-            <tr>
-              <td class="has-text-right">Louis Davesne</td>
-              <td class="has-text-left">Pierre, le fils</td>
-            </tr>
-            <tr>
-              <td class="has-text-right">Matthieu Desquilbet</td>
-              <td class="has-text-left">L'envoyé</td>
-            </tr>
-            <tr>
-              <td class="has-text-right">Yann Guénon</td>
-              <td class="has-text-left">Paul, le père</td>
-            </tr>
-            <tr>
-              <td class="has-text-right">Margaux Lopez</td>
-              <td class="has-text-left">Lucie, la mère</td>
-            </tr>
-            <tr>
-              <td class="has-text-right">Alwina Najem-Meyer</td>
-              <td class="has-text-left">Émilie, la bonne</td>
-            </tr>
-            <tr>
-              <td class="has-text-right">Pauline Scoupe-Fournier</td>
-              <td class="has-text-left">Odette, la fille</td>
-            </tr>
-          </tbody>
-        </table>
-
-        <h3 class="has-text-light">Programmation</h3>
-        <p>
-          Au <b>Centre Paris Anim' Point du Jour</b> le 30/11 et le 01/12 2023 à 20h<br />
-        </p>
-      </div>
-
-      <div class="block">
         <figure>
           <img
             src="img/theoreme/theoreme-affiche-web.png"
@@ -219,7 +182,7 @@
         </figure>
       </div>
     </section>
-    
+
     <footer class="is-size-7 mt-4 mr-auto mb-1 ml-auto">
       <p class="columns is-mobile m-0">
         <a
