--- a/theoreme.html
+++ b/theoreme.html
@@ -208,7 +208,21 @@
         <h3 class="has-text-light">Programmation</h3>
         <p>
           Au <b>Centre Paris Anim' Point du Jour</b> le 30/11 et le 01/12 2023 à
-          20h<br />
+          20h<br /><a
+            class="button is-black is-inverted is-outlined m-4 is-large"
+            href="https://www.helloasso.com/associations/les-sept-sceaux/evenements/theoreme-de-pier-paolo-pasolini"
+            target="_blank"
+            ><span class="icon">
+              <i class="mdi mdi-ticket-confirmation"></i> </span
+            ><span>30/11</span></a
+          ><a
+            class="button is-black is-inverted is-outlined m-4 is-large"
+            href="https://www.helloasso.com/associations/les-sept-sceaux/evenements/theoreme-de-pier-paolo-pasolini-01-12"
+            target="_blank"
+            ><span class="icon">
+              <i class="mdi mdi-ticket-confirmation"></i> </span
+            ><span>01/12</span></a
+          >
         </p>
       </div>
 
