fix(contact): update basic infos to stick to reality

--- a/contact.html
+++ b/contact.html
@@ -121,7 +121,7 @@
           </div>
 
           <div class="content">
-            <h3 class="is-uppercase">Collectif</h3>
+            <h3 class="is-uppercase">Compagnie</h3>
             <h4>Les Sept Sceaux</h4>
             <p>
               <span class="icon">
@@ -155,15 +155,15 @@
               lesseptsceaux<span class="icon"> <i class="mdi mdi-at"></i> </span
               >hotmail.com
             </p>
-            <h3 class="is-uppercase">Chargé de production</h3>
+            <h3 class="is-uppercase">Porteur de projet</h3>
             <h4>Matthieu Desquilbet</h4>
             <p>
               <span class="icon">
                 <i class="mdi mdi-email"></i>
               </span>
-              matthieu.desquilbet<span class="icon">
+              lesseptsceaux.prowess016<span class="icon">
                 <i class="mdi mdi-at"></i> </span
-              >gmail.com<br />
+              >passinbox.com<br />
               Dossiers de presse :
               <a
                 href="/electre-ou-le-crepuscule-des-rois-dossier-presse.pdf"
