feat(contact): create emails from domain

--- a/contact.html
+++ b/contact.html
@@ -152,8 +152,8 @@
               <span class="icon">
                 <i class="mdi mdi-email"></i>
               </span>
-              lesseptsceaux<span class="icon"> <i class="mdi mdi-at"></i> </span
-              >hotmail.com
+              contact<span class="icon"> <i class="mdi mdi-at"></i> </span
+              >lesseptsceaux.com
             </p>
             <h3 class="is-uppercase">Porteur de projet</h3>
             <h4>Matthieu Desquilbet</h4>
@@ -161,9 +161,9 @@
               <span class="icon">
                 <i class="mdi mdi-email"></i>
               </span>
-              lesseptsceaux.prowess016<span class="icon">
+              matthieu<span class="icon">
                 <i class="mdi mdi-at"></i> </span
-              >passinbox.com<br />
+              >lesseptsceaux.com<br />
               Dossiers de presse :
               <a
                 href="/electre-ou-le-crepuscule-des-rois-dossier-presse.pdf"
